--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,11 @@ code {
   padding: 10px;
 }
 
-.post-form {
+.post{
+  width: 50%;
+  padding: 5px;
+  background-color: lightgray;
+  margin: 10px 0;
 }
 
 .text-input {
